# celine-utils

./: .env.example  .gitignore  CHANGELOG.md  README.md  dump.yaml  pyproject.toml  taskfile.yaml
.github/workflows/: release.yaml  update-docs.yaml
celine/cli/: app.py
celine/cli/commands/governance/: generate.py
celine/cli/commands/pipeline/: app.py  init.py  run.py
celine/common/: logger.py  model.py  sql.py
celine/common/keycloak/: keycloak_admin.py  keycloak_client.py
celine/datasets/: __main__.py  client.py
celine/pipelines/: const.py  governance.py  pipeline.py  pipeline_config.py  pipeline_prefect.py  pipeline_runner.py  pipeline_tools.py  utils.py
celine/pipelines/lineage/: client.py  datasets.py  dbt.py  meltano.py
celine/pipelines/lineage/facets/: governance.py
celine/pipelines/storage/: archiver.py
docs/: cli.md  governance.md  pipeline-tutorial.md  schemas.md
integration-tests/: .env.local  .gitignore  docker-compose.yaml  taskfile.yaml
integration-tests/apps/demo_app/: .env.local  governance.yaml
integration-tests/config/marquez/: marquez.yaml
integration-tests/data/: test.csv
integration-tests/test/: conftest.py  test_lineage.py
integration-tests/tests/: conftest.py  test_dbt_failure.py  test_dbt_macro.py  test_meltano_failure.py  test_pipeline_runner.py
integration-tests/tests/cli/: test_governance_generate.py
integration-tests/tests/pipelines/: test_dbt_failure.py
schema/: GovernanceDatasetFacet.schema.json  governance.schema.json  owners.schema.json
scripts/: dump_source.py
src/celine/utils/pipelines/: context.py  (+8 more)
(+31 files in other folders)
